--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,8 @@ name: release
       - master
 
 permissions:
-  contents: read
+  contents: write
+  packages: write
 
 jobs:
   release:
@@ -16,22 +17,10 @@ jobs:
     if: github.repository == 'promhippie/charts'
 
     steps:
-      - name: Generate token
-        id: token
-        uses: tibdex/github-app-token@v2
-        with:
-          app_id: ${{ secrets.TOKEN_EXCHANGE_APP }}
-          installation_retrieval_mode: id
-          installation_retrieval_payload: ${{ secrets.TOKEN_EXCHANGE_INSTALL }}
-          private_key: ${{ secrets.TOKEN_EXCHANGE_KEY }}
-          permissions: >-
-            {"contents": "write", "packages": "write"}
-
       - name: Checkout source
         id: source
         uses: actions/checkout@v4
         with:
-          token: ${{ steps.token.outputs.token }}
           fetch-depth: 0
 
       - name: Setup helm
@@ -76,7 +65,7 @@ jobs:
 
       - name: Push charts
         run: |
-          echo "${{ secrets.BOT_ACCESS_TOKEN }}" | helm registry login --username bothippie --password-stdin ghcr.io
+          echo "${{ secrets.GITHUB_TOKEN }}" | helm registry login --username bothippie --password-stdin ghcr.io
 
           for pkg in .cr-release-packages/*.tgz; do
             if [ -z "${pkg:-}" ]; then
