--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -17,6 +17,17 @@ jobs:
     if: github.actor == 'dependabot[bot]'
 
     steps:
+      - name: Generate token
+        id: token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.TOKEN_EXCHANGE_APP }}
+          installation_retrieval_mode: id
+          installation_retrieval_payload: ${{ secrets.TOKEN_EXCHANGE_INSTALL }}
+          private_key: ${{ secrets.TOKEN_EXCHANGE_KEY }}
+          permissions: >-
+            {"contents": "write", "pull_requests": "write", "issues": "write"}
+
       - name: Fetch metadata
         id: metadata
         uses: dependabot/fetch-metadata@v1
@@ -33,6 +44,6 @@ jobs:
         id: automerge
         run: gh pr merge --rebase --auto "${{github.event.pull_request.html_url}}"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.token.outputs.token }}
 
 ...
