chore: use current go version for update scripting

--- a/.github/workflows/updates.yml
+++ b/.github/workflows/updates.yml
@@ -35,10 +35,9 @@ jobs:
           fetch-depth: 0
 
       - name: Setup golang
-        id: golang
         uses: actions/setup-go@v5
         with:
-          go-version: ^1.23.0
+          go-version-file: go.mod
 
       - name: Update versions
         id: updater
