--- a/stable/prometheus-hetzner-sd/templates/deployment.yaml
+++ b/stable/prometheus-hetzner-sd/templates/deployment.yaml
@@ -19,6 +19,9 @@ spec:
   selector:
     matchLabels:
       {{- include "prometheus-hetzner-sd.selectorLabels" . | nindent 6 }}
+  {{- if .Values.updateStrategy }}
+  updateStrategy: {{- toYaml .Values.updateStrategy | nindent 4 }}
+  {{- end }}
   template:
     metadata:
       labels:
