fix: resolve search and replace issue within update strategy

--- a/stable/prometheus-hcloud-sd/templates/deployment.yaml
+++ b/stable/prometheus-hcloud-sd/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     matchLabels:
       {{- include "prometheus-hcloud-sd.selectorLabels" . | nindent 6 }}
   {{- if .Values.updateStrategy }}
-  updateStrategy: {{- toYaml .Values.updateStrategy | nindent 4 }}
+  strategy: {{- toYaml .Values.updateStrategy | nindent 4 }}
   {{- end }}
   template:
     metadata:
