--- a/stable/dockerhub-exporter/templates/deployment.yaml
+++ b/stable/dockerhub-exporter/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     matchLabels:
       {{- include "dockerhub-exporter.selectorLabels" . | nindent 6 }}
   {{- if .Values.updateStrategy }}
-  updateStrategy: {{- toYaml .Values.updateStrategy | nindent 4 }}
+  strategy: {{- toYaml .Values.updateStrategy | nindent 4 }}
   {{- end }}
   template:
     metadata:
