--- a/.github/workflows/helmdocs.yml
+++ b/.github/workflows/helmdocs.yml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://www.schemastore.org/github-workflow.json
 name: helmdocs
 
 "on":
@@ -17,7 +18,6 @@ jobs:
 
     steps:
       - name: Checkout source
-        id: source
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.BOT_ACCESS_TOKEN }}
@@ -30,7 +30,6 @@ jobs:
           entrypoint: helm-docs
 
       - name: Commit changes
-        id: commit
         uses: EndBug/add-and-commit@v9
         with:
           author_name: GitHub Actions
