ci: upgrade linting to use python 3.14

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,7 +21,6 @@ jobs:
           fetch-depth: 0
 
       - name: Setup gnupg
-        id: gnupg
         uses: crazy-max/ghaction-import-gpg@v6
         with:
           gpg_private_key: ${{ secrets.GNUPG_KEY }}
@@ -29,7 +28,6 @@ jobs:
           trust_level: 5
 
       - name: Setup python
-        id: python
         uses: actions/setup-python@v6
         with:
           python-version-file: .python-version
@@ -38,20 +36,16 @@ jobs:
         uses: nhedger/setup-sops@v2
 
       - name: Setup testing
-        id: setup
-        uses: helm/chart-testing-action@v2.7.0
+        uses: helm/chart-testing-action@main
 
       - name: Setup helm
-        id: helm
         uses: azure/setup-helm@v4
 
       - name: Helm plugins
-        id: plugins
         run: |
           helm plugin install https://github.com/jkroepke/helm-secrets
 
       - name: Decrypt secrets
-        id: secrets
         run: |
           for FILE in $(find stable -iname \*.enc); do
             helm secrets decrypt ${FILE} >| ${FILE%.enc}.yaml
@@ -67,18 +61,14 @@ jobs:
           fi
 
       - name: Run Linting
-        id: linting
-        if: steps.detect.outputs.changed == 'true'
         run: |
           ct lint --config ct.yaml
 
       - name: Create kind
-        id: kind
         if: steps.detect.outputs.changed == 'true'
         uses: helm/kind-action@v1.13.0
 
       - name: Run testing
-        id: testing
         if: steps.detect.outputs.changed == 'true'
         run: |
           ct install --config ct.yaml
