--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Setup helm
         uses: azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4 # v4
 
+      - name: Import gnupg
+        run: |
+          curl -fsSL https://github.com/jkroepke.gpg | gpg --import
+
       - name: Helm plugins
         run: |
           helm plugin install https://github.com/jkroepke/helm-secrets/releases/download/v4.7.4/secrets-4.7.4.tgz
