--- a/.github/workflows/helmdocs.yml
+++ b/.github/workflows/helmdocs.yml
@@ -36,6 +36,9 @@ jobs:
         with:
           entrypoint: helm-docs
 
+      - name: Source rebase
+        run: git pull --autostash --rebase
+
       - name: Commit changes
         uses: EndBug/add-and-commit@a94899bca583c204427a224a7af87c02f9b325d5 # v9
         with:
